syntax = "proto3";
package user;
option go_package = "github.com/spielbrett/spielbrett-api/gen/go/user";

service UserService {
}
